# tileserver-rs

./: .dockerignore  .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PUBLISHING.md  README.md  build.rs  codecov.yml  compose.dev.yml  config.example.toml  config.offline.toml  docker-entrypoint.sh  fly.toml  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  release-please-config.json  release-plz.toml  render.yaml  rust-toolchain.toml  rustfmt.toml
.claude/skills/content-strategy/: SKILL.md
.claude/skills/launch-strategy/: SKILL.md
.claude/skills/marketing-ideas/: SKILL.md
.claude/skills/marketing-psychology/: SKILL.md
.claude/skills/nuxt-best-practices/: AGENTS.md  package.json
.claude/skills/nuxt-seo-best-practices/: AGENTS.md  metadata.json  package.json
.claude/skills/social-content/: SKILL.md
.claude/skills/vue-best-practices/: AGENTS.md  package.json
.do/: deploy.template.yaml
.github/: ARCHITECTURE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: automerger.yml  build-mbgl-native.yml  ci-node.yml  ci-rust.yml  coverage.yml  deploy-docs.yml  deploy-marketing.yml  lint-branch.yml  lint-pr.yml  pipeline.yml  release-docker-images.yml  release-docker.yml  release-homebrew.yml  release-linux-amd64.yml  release-linux-arm64.yml  release-linux-binaries.yml  release-linux.yml  release-macos-amd64.yml  release-macos-arm64.yml  release-macos-binaries.yml  release-please.yml  release-plz.yml  release-sample-data.yml
.husky/: commit-msg
apps/client/: nuxt.config.ts  package.json
apps/client/app/: app.vue
apps/docs/: .oxfmtrc.jsonc  components.json  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/docs/app/: app.vue
apps/docs/content/: index.md
apps/marketing/: eslint.config.js  nuxt.config.ts  package.json
apps/marketing/app/: app.vue
benches/: mlt.rs
benches/fixtures/: 13_4267_5469.mvt
benchmarks/: README.md  config.docker.toml  config.local.toml  docker-compose.yml  package.json  run-benchmarks.js  tileserver-gl-config.json  tileserver-gl-style.json
benchmarks/postgres/: Dockerfile  init-ogc.sql
benchmarks/results/: README.md
configs/: benchmark-raster.toml  dev-postgres.toml  duckdb.toml  example.toml  geoparquet.toml  offline.toml
crates/mbgl-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/mbgl-sys/cpp/: maplibre_c.h  maplibre_c_stub.c
crates/mbgl-sys/src/: lib.rs
crates/tileserver-rs/: CHANGELOG.md  Cargo.toml
crates/tileserver-rs/benches/: cache.rs  cog.rs  duckdb.rs  frontend.rs  geoparquet.rs  metrics_overhead.rs  mlt.rs  postgres.rs  raster.rs  stac.rs  styles.rs
crates/tileserver-rs/benches/fixtures/: 13_4267_5469.mlt  4_8_5.mlt  4_8_5.mvt
crates/tileserver-rs/src/: admin.rs  autodetect.rs  cache.rs  cache_control.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  openapi.rs  reload.rs  startup.rs  telemetry.rs  transcode.rs  upload.rs
crates/tileserver-rs/src/metrics/: http_middleware.rs  instruments.rs  labels.rs  mod.rs  recorder.rs  server.rs
crates/tileserver-rs/src/raster/: decode.rs  encode.rs  image.rs
crates/tileserver-rs/src/raster/mosaic/: methods.rs  mod.rs
crates/tileserver-rs/src/render/: native.rs  overlay.rs  pool.rs  renderer.rs
crates/tileserver-rs/src/routes/: fonts.rs  ogc.rs  ogc_crs.rs  ogc_filter.rs  render.rs  spatial.rs  styles.rs
crates/tileserver-rs/src/sources/: cog.rs  duckdb.rs  geoparquet.rs  manager.rs  mbtiles.rs  mod.rs  stac.rs
crates/tileserver-rs/src/sources/pmtiles/: http.rs  local.rs
crates/tileserver-rs/src/sources/postgres/: mod.rs  outdb.rs  table.rs
crates/tileserver-rs/src/styles/: mod.rs
crates/tileserver-rs/tests/: api_endpoints.rs  config.postgres.toml  config.raster.toml  config.test.toml  e2e_rendering.rs  integration.rs  metrics_endpoint.rs  postgres_sources.rs  raster_sources.rs
crates/tileserver-rs/tests/snapshots/: .gitkeep  e2e_rendering__json_snapshots__sources_list.snap  e2e_rendering__json_snapshots__style_infos.snap  e2e_rendering__json_snapshots__tilejson_protomaps.snap  e2e_rendering__raster_json_snapshots__tilejson_cog_rgb.snap
data/configs/: dev-postgres.toml  dev.toml  duckdb.toml  example.toml  geoparquet.toml  metrics-strict.toml  no-telemetry.toml  offline.toml
data/postgres-dev/: countries_seed.sql  init.sql
data/styles/: .gitignore
data/styles/overture-divisions/: style.json
data/styles/overture-places/: style.json
data/styles/postgis-collections/: style.json
data/styles/sentinel2/: style.json
data/styles/sentinel2-dynamic/: style.json
deploy/: README.md  compose.dev.yml  compose.prod.yml  compose.yml  docker-entrypoint.sh
deploy/benchmarks/: README.md
deploy/local/: compose.override.yml  compose.yml
deploy/postgres-dev/: Dockerfile  countries_seed.sql  init.sql
deploy/prod/: compose.override.yml  compose.yml
homebrew/Formula/: tileserver-rs.rb
maplibre-native-sys/: Cargo.toml
maplibre-native-sys/cpp/: maplibre_c.cpp
src/: admin.rs  autodetect.rs  cache.rs  cache_control.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  openapi.rs  reload.rs  telemetry.rs  transcode.rs  upload.rs  wmts.rs
src/raster/: convert.rs  decode.rs  encode.rs  expression.rs  image.rs  mod.rs
src/render/: mod.rs  native.rs  overlay.rs  pool.rs  renderer.rs  types.rs
src/routes/: data.rs  files.rs  fonts.rs  mod.rs  ogc.rs  ogc_filter.rs  render.rs  spatial.rs  styles.rs
src/sources/: cog.rs  dataset_cache.rs  duckdb.rs  duckdb_source.rs  geoparquet.rs  manager.rs  mbtiles.rs  mod.rs  pmtiles.rs  stac.rs
src/sources/pmtiles/: cloud.rs  http.rs  local.rs
src/styles/: mod.rs
tests/: api_endpoints.rs  integration.rs  raster_sources.rs
tests/snapshots/: e2e_rendering__json_snapshots__sources_list.snap  e2e_rendering__json_snapshots__tilejson_protomaps.snap  e2e_rendering__raster_json_snapshots__raster_sources_list.snap  e2e_rendering__raster_json_snapshots__tilejson_cog_rgb.snap
(+177 files in other folders)
