[package]
name = "tileserver-rs"
version = "2.17.0"
edition = "2021"
rust-version = "1.75"
authors = ["Vinayak Kulkarni <inbox.vinayak@gmail.com>"]
description = "Tileserver for serving vector maps from data source(s)"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/vinayakkulkarni/tileserver-rs"
keywords = ["pmtiles", "mbtiles", "gis", "vector-tiles", "tileserver"]

[workspace]
members = [".", "maplibre-native-sys"]

[dependencies]
# MapLibre Native bindings for server-side rendering
maplibre-native-sys = { path = "maplibre-native-sys" }
anyhow = "1.0.102"
arc-swap = "1.8.2"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["multipart"] }
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.32"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
mime_guess = "2.0.5"
pmtiles = { version = "0.20.0", default-features = false, features = ["http-async", "mmap-async-tokio", "tilejson"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
shellexpand = { version = "3.1.2", default-features = false, features = ["base-0"] }
rust-embed = { version = "8.11.0", features = ["axum"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
geozero = { version = "0.15.1", features = ["with-mvt", "with-geojson"] }
flate2 = "1.1.9"
# MLT (MapLibre Tiles) transcoding support (optional)
mlt-core = { version = "0.4.0", optional = true }
prost = { version = "0.14.3", optional = true }
geo-types = { version = "0.7.18", optional = true }
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
tower-http = { version = "0.6.8", features = ["fs", "cors", "compression-gzip", "compression-br", "trace", "set-header"] }
urlencoding = "2.1.3"
uuid = { version = "1.22.0", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# OpenAPI / Swagger UI (bundled, no external dependencies)
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# OpenTelemetry
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.31.0"
tracing-opentelemetry = "0.32.1"

# MBTiles support (SQLite)
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Raster/COG support (optional, requires GDAL system library)
gdal = { version = "0.19.0", features = ["bindgen"], optional = true }

# PostgreSQL support (optional)
deadpool-postgres = { version = "0.14.1", optional = true }
tokio-postgres = { version = "0.7.16", optional = true, features = ["with-serde_json-1"] }
postgres-types = { version = "0.2.12", optional = true, features = ["derive"] }
semver = { version = "1.0.27", optional = true }
moka = { version = "0.12.14", features = ["future"], optional = true }

# Optional S3 support
# aws-config = { version = "1.5", optional = true }
# aws-sdk-s3 = { version = "1.65", optional = true }

[features]
default = ["postgres", "raster", "mlt"]
frontend = ["rust-embed"]
postgres = ["deadpool-postgres", "tokio-postgres", "postgres-types", "semver", "moka"]
postgres-integration = ["postgres"]
raster = ["gdal"]
# s3 = ["aws-config", "aws-sdk-s3"]
mlt = ["mlt-core", "prost", "geo-types"]

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
axum-test = "19.1.1"
tempfile = "3.27.0"
insta = { version = "1.46.3", features = ["json"] }
criterion = { version = "0.8.2", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true


[profile.bench]
inherits = "release"
debug = true
strip = false

[[bench]]
name = "mlt"
harness = false
required-features = ["mlt"]