[workspace]
resolver = "2"
# Virtual workspace (no root [package]) is load-bearing: it prevents
# release-please's `rust` strategy from sweeping every workspace member's
# [package].version to the releasing package's version. See
# release-please-action@v4 src/strategies/rust.ts buildUpdates() — when the
# same Cargo.toml is BOTH a workspace root AND a crate package, it reads
# workspace.members and writes its own newVersion into every member. We hit
# this on v2.26.0, v2.26.1, v2.26.2 (each required a manual revert commit
# restoring mbgl-sys to its 0.1.x train). Virtual workspace at root +
# subdirectory crates => each package strategy only touches its own
# Cargo.toml. Reference: geolith repo uses the same layout successfully.
members = ["crates/tileserver-rs", "crates/mbgl-sys"]

[workspace.package]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/vinayakkulkarni/tileserver-rs"

[workspace.dependencies]
# Internal crates
mbgl-sys = { path = "crates/mbgl-sys", version = "0.1.6" }

# Web framework
axum             = { version = "0.8.9", features = ["multipart"] }
tower-http       = { version = "0.6.10", features = ["fs", "cors", "compression-gzip", "compression-br", "trace", "set-header"] }

# Async runtime
tokio            = { version = "1.52.3", features = ["full"] }
futures          = "0.3.32"

# Serialization
serde            = { version = "1.0.228", features = ["derive"] }
serde_json       = "1.0.149"
toml             = "1.1.2"

# Error handling
thiserror        = "2.0.18"
anyhow           = "1.0.102"

# CLI
clap             = { version = "4.6.1", features = ["derive", "env"] }

# Logging / tracing
tracing          = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Tile formats
pmtiles          = { version = "0.23.0", default-features = false, features = ["http-async", "mmap-async-tokio", "tilejson", "object-store"] }

# Cloud object storage (optional)
object_store     = { version = "0.13", default-features = false, features = ["aws", "azure", "gcp"] }
geozero          = { version = "0.15.1", features = ["with-mvt", "with-geojson"] }
flate2           = "1.1.9"
prost            = "0.14.3"
geo-types        = "0.7.19"

# MLT support
# Pinned at 0.7.0 — DO NOT bump to 0.8.0 until cql2 0.5.6+ ships with geo
# bumped to 0.33+. mlt-core 0.8.0 transitively requires `geo ^0.33.1` (which
# pulls `i_overlay ^4.5`), but cql2 0.5.5 still requires `geo ^0.31.0` (which
# pins `i_overlay ^4.0`). geo's `i_overlay` constraint participates in its
# public API surface, so Cargo's resolver cannot select two `i_overlay`
# versions side-by-side and aborts with a hard "failed to select version"
# error during `cargo update`. The conflict is symmetric — neither can move
# without the other. Verified Apr 25 2026: `mvt_to_feature_collection` API
# we depend on (transcode.rs:200) is unchanged between 0.7.0 and 0.8.0, so
# we lose only the upstream tessellation/wasm fixes by staying. Reference:
# - mlt-core 0.8.0 release: https://github.com/maplibre/maplibre-tile-spec/releases/tag/rust-mlt-core-v0.8.0
# - cql2 0.5.5 main still pins geo 0.31: https://github.com/developmentseed/cql2-rs/blob/main/Cargo.toml
mlt-core         = { version = "0.7.0" }

# MBTiles / SQLite
rusqlite         = { version = "0.39.0", features = ["bundled"] }

# HTTP client
reqwest          = { version = "0.13.3", default-features = false, features = ["rustls", "json"] }

# Cryptography / hashing
sha2             = "0.11.0"
uuid             = { version = "1.23.1", features = ["v4"] }

# Binary formats / data
bytes            = "1.11.1"
image            = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
ndarray          = { version = "0.17.2", features = ["rayon"] }
exmex            = "0.20.5"

# Concurrency
arc-swap         = "1.9.1"
crossbeam-channel = "0.5"
async-trait      = "0.1.89"

# Utilities
dotenvy          = "0.15.7"
mime_guess       = "2.0.5"
shellexpand      = { version = "3.1.2", default-features = false, features = ["base-0"] }
url              = "2"
urlencoding      = "2.1.3"

# Embedded frontend (optional)
rust-embed       = { version = "8.11.0", features = ["axum"] }

# OpenAPI / Scalar API Reference
utoipa           = { version = "5.5.0", features = ["axum_extras"] }
scalar_api_reference = { version = "0.2", features = ["axum"] }

# OpenTelemetry
opentelemetry    = "0.32.0"
opentelemetry_sdk = { version = "0.32.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.32.0"
tracing-opentelemetry = "0.32.1"
# Prometheus pull-endpoint exporter — community successor to the discontinued
# `opentelemetry-prometheus` crate. Authored by Quentin Gliech (Element /
# Matrix.org) and explicitly endorsed by the OTel-Rust maintainers in
# <https://github.com/open-telemetry/opentelemetry-rust/issues/2451> as the
# replacement after the original crate was deprecated due to its `protobuf`
# dependency carrying unresolved security vulnerabilities. Pinned EXACT (`=`)
# because the crate is pre-1.0 (`0.2.x`) and may make breaking changes
# between minor versions; bumping requires a deliberate review of the
# changelog and an update to our `metrics/server.rs` integration.
opentelemetry-prometheus-text-exporter = "=0.2.1"

# Raster / GDAL (optional)
gdal             = { version = "0.19.0", features = ["bindgen"] }
stac             = { version = "0.17.0", default-features = false }

# PostgreSQL (optional)
deadpool-postgres = "0.14.1"
tokio-postgres   = { version = "0.7.17", features = ["with-serde_json-1"] }
postgres-types   = { version = "0.2.13", features = ["derive"] }
semver           = "1.0.28"
moka             = { version = "0.12.15", features = ["future"] }

# OGC API (optional, used with postgres)
ogcapi-types     = { version = "0.3.0", features = ["features", "common"] }
geojson          = "1.0.0"
cql2             = "0.5.5"

# GeoParquet (optional)
parquet          = { version = "58", default-features = false, features = ["arrow", "zstd", "snap", "lz4", "async"] }
arrow-array      = "58"
arrow-schema     = "58"
arrow-cast       = "58"
# geo 0.33 is available but blocked by cql2's transitive `geo ^0.31.0`
# constraint: geo 0.31 pins `i_overlay ^4.0`, geo 0.33 pins `i_overlay ^4.5`,
# and Cargo cannot resolve both in the same graph. Our own code has zero
# `use geo::…` imports (verified Apr 2026) — the workspace dep only exists for
# the unfinished `geoparquet` feature. Upstream history (tricky):
#   - Filed developmentseed/cql2-rs#199 on Apr 21 2026
#   - Their PR #201 merged the geo 0.31→0.32 bump at 15:49 same day
#   - Their stale v0.5.4 release-plz PR #175 merged 15 min later and
#     OVERWROTE Cargo.toml back to geo 0.31 (branch was 7 weeks old)
#   - Their PR #208 merged the geo 0.31→0.33.1 bump on Apr 21 23:34 UTC
#   - Their cql2-v0.5.5 release tag was cut Apr 22 00:02 UTC, but the
#     release-please PR #203 had been opened BEFORE PR #208 and shipped
#     a Cargo.toml snapshot with the OLD `geo = "0.31.0"`. The release
#     notes mention the geo bump (release-please scrapes commit log) but
#     the actual published .crate on crates.io ships geo 0.31. Verified
#     by downloading cql2-0.5.5.crate + inspecting Cargo.toml directly.
#   - Even main branch on cql2-rs (Apr 22) still declares geo = "0.31.0"
# Status as of Apr 22 2026: re-verified at cql2 0.5.5 — still blocked.
# Will unblock only when cql2 cuts v0.5.6+ AFTER another geo bump PR
# lands AND the release PR is rebased to include it.
# DO NOT bump to 0.33 without verifying `cargo check --features "postgres
# geoparquet"` resolves cleanly — the i_overlay conflict aborts resolution.
geo              = "0.32"

# DuckDB (optional)
duckdb           = { version = "1.10502.0", features = ["bundled"] }

# FFI
libc             = "0.2"
cc               = "1.2"
cmake            = "0.1"
pkg-config       = "0.3"

# Prebuilt download (build-dependencies for mbgl-sys prebuilt feature)
ureq             = { version = "3", default-features = false, features = ["rustls"] }
tar              = "0.4"

# Dev / test dependencies
tower            = { version = "0.5.3", features = ["util"] }
axum-test        = "20.0.0"
tempfile         = "3.27.0"
insta            = { version = "1.47.2", features = ["json"] }
criterion        = { version = "0.8.2", features = ["html_reports"] }

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious  = "warn"
style       = "warn"
complexity  = "warn"
perf        = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.lints.rust]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.dev.package."*"]
opt-level = 3
