[package]
name = "mbgl-sys"
version = "2.20.1"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
description = "Low-level FFI bindings to MapLibre GL Native for server-side map rendering"
readme = "README.md"
build = "build.rs"
links = "mbgl"
keywords = ["maplibre", "mapbox", "opengl", "ffi", "rendering"]
categories = ["external-ffi-bindings", "graphics", "rendering"]
include = [
    "src/**/*.rs",
    "cpp/**",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[lints]
workspace = true

[dependencies]
libc = { workspace = true }

[build-dependencies]
cc = { workspace = true }
cmake = { workspace = true }
pkg-config = { workspace = true }
ureq = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[features]
default = ["bundled"]
bundled = []
system = []
prebuilt = ["dep:ureq", "dep:tar", "dep:flate2", "dep:sha2"]
