[package]
name = "tileserver-rs"
version = "2.26.4"
edition.workspace = true
rust-version.workspace = true
authors = ["Vinayak Kulkarni <inbox.vinayak@gmail.com>"]
description = "Tileserver for serving vector maps from data source(s)"
license-file = "../../LICENSE"
readme = "../../README.md"
repository.workspace = true
keywords = ["pmtiles", "mbtiles", "gis", "vector-tiles", "tileserver"]
publish = false

[lints]
workspace = true

[dependencies]
mbgl-sys         = { workspace = true }
anyhow           = { workspace = true }
arc-swap         = { workspace = true }
async-trait      = { workspace = true }
axum             = { workspace = true }
bytes            = { workspace = true }
clap             = { workspace = true }
dotenvy          = { workspace = true }
futures          = { workspace = true }
image            = { workspace = true }
mime_guess       = { workspace = true }
pmtiles          = { workspace = true }
reqwest          = { workspace = true }
shellexpand      = { workspace = true }
rust-embed       = { workspace = true, optional = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
sha2             = { workspace = true }
thiserror        = { workspace = true }
geozero          = { workspace = true }
flate2           = { workspace = true }
# MLT (MapLibre Tiles) transcoding support (optional)
mlt-core         = { workspace = true, optional = true }
prost            = { workspace = true, optional = true }
geo-types        = { workspace = true, optional = true }
tokio            = { workspace = true }
crossbeam-channel = { workspace = true }
toml             = { workspace = true }
tower-http       = { workspace = true }
urlencoding      = { workspace = true }
uuid             = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenAPI / Scalar API Reference (bundled, no external dependencies)
utoipa           = { workspace = true }
scalar_api_reference = { workspace = true }

# OpenTelemetry
opentelemetry    = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }

# MBTiles support (SQLite)
rusqlite         = { workspace = true }

# Raster/COG support (optional, requires GDAL system library)
gdal             = { workspace = true, optional = true }
stac             = { workspace = true, optional = true }
ndarray          = { workspace = true, optional = true }
exmex            = { workspace = true, optional = true }

# PostgreSQL support (optional)
deadpool-postgres = { workspace = true, optional = true }
tokio-postgres   = { workspace = true, optional = true }
postgres-types   = { workspace = true, optional = true }
semver           = { workspace = true, optional = true }
moka             = { workspace = true }
ogcapi-types     = { workspace = true, optional = true }
geojson          = { workspace = true, optional = true }
cql2             = { workspace = true, optional = true }

# Cloud object storage (S3/Azure/GCS)
object_store     = { workspace = true, optional = true }
url              = { workspace = true, optional = true }

# GeoParquet support (optional)
parquet          = { workspace = true, optional = true }
arrow-array      = { workspace = true, optional = true }
arrow-schema     = { workspace = true, optional = true }
arrow-cast       = { workspace = true, optional = true }
geo              = { workspace = true, optional = true }

# DuckDB support (optional)
duckdb           = { workspace = true, optional = true }

[features]
default = ["postgres", "raster", "mlt", "cloud", "stac"]
frontend = ["rust-embed"]
postgres = ["deadpool-postgres", "tokio-postgres", "postgres-types", "semver", "dep:ogcapi-types", "dep:geojson", "dep:cql2"]
postgres-integration = ["postgres"]
raster = ["gdal", "dep:ndarray", "dep:exmex"]
cloud = ["object_store", "url"]
mlt = ["mlt-core", "dep:prost", "geo-types"]
geoparquet = ["dep:parquet", "dep:arrow-array", "dep:arrow-schema", "dep:arrow-cast", "dep:geo", "dep:prost"]
duckdb = ["dep:duckdb", "dep:prost"]
stac = ["raster", "dep:stac"]

[dev-dependencies]
tower            = { workspace = true }
axum-test        = { workspace = true }
tempfile         = { workspace = true }
insta            = { workspace = true }
criterion        = { workspace = true }

[[bench]]
name = "mlt"
harness = false
required-features = ["mlt"]

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "raster"
harness = false
required-features = ["raster"]

[[bench]]
name = "styles"
harness = false
